Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <p>Web: <a href="http://www.solarma.it/">www.solarma.it</a></p>
 
-<p>Twitter: <a href="https://twitter.com/solarmasnc/">solarmasnc</a></p>
+<p>Twitter: <a href="https://twitter.com/solarmasnc/">@solarmasnc</a></p>
       </section>
     </div>
     <footer>
