--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Solarma.github.com</h1>
+        <h1>solarma.github.com</h1>
         <p>SOLARMA Public Web Site</p>
         <p class="view"><a href="https://github.com/SOLARMA">View the Project on GitHub <small>SOLARMA</small></a></p>
         <ul>
