Include SOLARMA logo

--- a/index.html
+++ b/index.html
@@ -19,14 +19,24 @@
       <header>
         <h1>solarma.github.com</h1>
         <p>SOLARMA Public Web Site</p>
-        <p class="view"><a href="https://github.com/SOLARMA">View the Project on GitHub <small>SOLARMA</small></a></p>
+        <!--
+<p class="view"><a href="https://github.com/SOLARMA">View the Project on GitHub <small>SOLARMA</small></a></p>
+-->
         <ul>
-          <li class="single"><a href="https://github.com/SOLARMA/solarma.github.com">View On <strong>GitHub</strong></a></li>
+          <li class="single">
+	    <a href="https://github.com/SOLARMA/solarma.github.com">
+	      View On <strong>GitHub</strong>
+	    </a></li>
         </ul>
       </header>
       <section>
         <h1>
-<a name="solarma-snc" class="anchor" href="#solarma-snc"><span class="octicon octicon-link"></span></a>SOLARMA S.N.C.</h1>
+          <a name="solarma-snc" class="anchor" href="#solarma-snc">
+            <span class="octicon octicon-link">
+              <img src="images/SOLARMA_logo.png" alt="SOLARMA S.N.C."/>
+            </span>
+          </a>
+        </h1>
 
 <p>Sede Fiscale: VIA ROMA 58, 12100 CUNEO (CN)</p>
 
