--- a/old/index.html
+++ b/old/index.html
@@ -9,7 +9,7 @@
 
 
 <link rel='stylesheet' href='http://cdn1.editmysite.com/editor/images/common/common-v2.css?22' type='text/css' />
-<link rel='stylesheet' type='text/css' href='/files/main_style.css?1332104818' title='wsite-theme-css' />
+<link rel='stylesheet' type='text/css' href='files/main_style.css?1332104818' title='wsite-theme-css' />
 <style type='text/css'>
 #wsite-content div.paragraph, #wsite-content p, #wsite-content .product-description, .blog-sidebar div.paragraph, .blog-sidebar p, .wsite-form-field label, .wsite-form-field label {}
 #wsite-content h2, #wsite-content .product-title, .blog-sidebar h2{}
