--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>solarma.github.com</h1>
-        <p>SOLARMA Public Web Site</p>
+        <h1>www.solarma.it</h1>
+        <p>SOLARMA S.N.C. Public Web Site</p>
         <!--
-<p class="view"><a href="https://github.com/SOLARMA">View the Project on GitHub <small>SOLARMA</small></a></p>
--->
+        <p class="view"><a href="https://github.com/SOLARMA">View the Project on GitHub <small>SOLARMA</small></a></p>
+        -->
+<!--
         <ul>
           <li class="single">
 	    <a href="https://github.com/SOLARMA/solarma.github.com">
 	      View On <strong>GitHub</strong>
 	    </a></li>
         </ul>
+-->
       </header>
       <section>
         <h1>
@@ -51,9 +53,11 @@
 <p>Twitter: <a href="https://twitter.com/solarmasnc/">@solarmasnc</a></p>
       </section>
     </div>
+<!--
     <footer>
       <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
     </footer>
+-->
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
