Add: Codice Destinatario, PEC

--- a/index.html
+++ b/index.html
@@ -39,18 +39,22 @@
             </span>
           </a>
         </h1>
-
-<p>Sede Fiscale: VIA ROMA 58, 12100 CUNEO (CN)</p>
-
-<p>Partita IVA: 03430200042</p>
-
-<p>Numero REA: CN - 290167</p>
-
 <p>Email: <a href="mailto:info@solarma.it">info@solarma.it</a></p>
 
 <p>Web: <a href="http://www.solarma.it/">www.solarma.it</a></p>
 
 <p>Twitter: <a href="https://twitter.com/solarmasnc/">@solarmasnc</a></p>
+	      
+<p>Sede Fiscale: VIA ROMA 58, 12100 CUNEO (CN)</p>
+
+<p>Partita IVA: 03430200042</p>
+	      
+<p>Codice Destinatario per Fatturazione Elettronica: W7YVJK9</p>
+
+<p>PEC: <a href="mailto:gianpaolo.macario@ingpec.eu">gianpaolo.macario@ingpec.eu</a></p>
+
+<p>Numero REA: CN - 290167</p>
+
       </section>
     </div>
 <!--
