index.html: Add new GA4 tag

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
     gtag('js', new Date());
     gtag('config', 'UA-218987493-1');
   </script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2ZJF0K1SZL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-2ZJF0K1SZL');
+  </script>
 </head>
 
 <body>
